--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ body{
     padding: 24px;
     margin: 2rem;
     width: 40%;
-    min-width: 480px;
+    box-sizing: border-box;
+    min-width: 600px;
     border-radius: 24px;
     display: flex;
     flex-direction: column;
@@ -95,6 +96,10 @@ body{
     position: relative;
 }
 
+input[type="range"] {
+    accent-color: var(--color-accent);
+}
+
 .percent_range input {
     display: inline-block;
     margin: 0;
@@ -116,7 +121,8 @@ body{
     border: none;
     border-radius: 10px;
     font-size: 1.2rem;
-    padding: 1.1rem 1.5rem 1rem 1.2rem;
+    box-sizing: border-box;
+    padding: 1.1rem 0rem 1rem 1.2rem;
 }
 
 .input_field:active, .input_field:focus{
@@ -173,6 +179,19 @@ body{
 
 .submit button:active {
     transform: scale(1.2, 1.2);
-    transition: transform 1s ease-in-out;
-    
+    transition: transform 1s ease-in-out;   
+}
+
+@media screen and (max-width:640px) {
+    .card{
+        width:100%;
+        margin: 0;
+        min-width: 0px !important;
+    }
+    body {
+        background-color: var(--color-card-bg);
+    }
+    .input_field_border{
+        flex: 0 0 100%;
+    }
 }
