--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body{
     margin: 0;
 }
 
-.input_field_border {
+.input_field_container {
     border-radius: 8px;
     border: 1px solid var(--color-accent);
     position: relative;
@@ -66,7 +66,7 @@ body{
     flex: 0 0 calc(50% - 10px);
 }
 
-.input_field_border:focus-within {
+.input_field_container:focus-within {
     outline: 2px solid var(--color-accent);
 }
 
@@ -197,7 +197,7 @@ input[type="range"] {
     body {
         background-color: var(--color-card-bg);
     }
-    .input_field_border{
+    .input_field_container{
         flex: 0 0 100%;
     }
 }
